--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,12 @@
-body{
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-*::-webkit-scrollbar{
-  width: 1px;
+* {
+  padding: 0;
 }
-
-.left {
-  display: absolute;
-  bottom: 10px;
-  display: flex;
-  flex-direction: column;
+*::-webkit-scrollbar {
+  width: 1px;
 }
